[package]
name = "password-encryptor"
version = "1.1.1"
edition = "2021"
description = "A helper crate for encrypting and validating password"
license = "MIT"
readme = "readme.md"
keywords = ["password","ecryption","auth","encrypt","decrypt"]
repository = "https://github.com/nikola-bozin-org/password-encryptor"

[dependencies]
base64-url = "2.0.2"
hmac = "0.12.1"
sha2 = "0.10.8"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
